Day-178-API-Gateway-Contour/1-ai-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensive-ai-endpoint
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-api
  template:
    metadata:
      labels:
        app: ai-api
    spec:
      containers:
      - name: api
        image: stefanprodan/podinfo:6.0.0
        ports:
        - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: ai-backend-svc
  namespace: default
spec:
  selector:
    app: ai-api
  ports:
    - port: 9898
      targetPort: 9898
