Day-178-API-Gateway-Contour/2-httpproxy-gateway.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: secure-ai-gateway
  namespace: default
spec:
  virtualhost:
    fqdn: ai-matrix.local
  routes:
    - conditions:
      - prefix: /
      services:
        - name: ai-backend-svc
          port: 9898
      localRateLimitPolicy:
        requests: 3
        unit: minute
